gitops/apps/paas-ui/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-ui
  namespace: paas-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paas-ui
  template:
    metadata:
      labels:
        app: paas-ui
    spec:
      imagePullSecrets:
        - name: scr-pull
      containers:
        - name: ui
          image: registry.onstackit.cloud/scr-daniel/paas-ui:3de7015
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
