gitops/apps/paas-ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paas-ui
  namespace: paas-ui
spec:
  selector:
    app: paas-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
