gitops/apps/paas-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-ui
  namespace: paas-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - daniel-paas.stackit.gg
      secretName: daniel-paas-tls
  rules:
    - host: daniel-paas.stackit.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paas-ui
                port:
                  number: 80
